--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     margin: 0 auto;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    background-color: #33cccc;
+    background-color: #196b6b;
 }
 
 .formContainer {
